refactor: use virtual threads